--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <div class="container navigation-header">
         <nav class="navigation nav-header">
           <a href="./index.html" class="logo logo-header">
-            <span class="logo-webstudio">Web</span>Studio</a>
+            <span class="logo-webstudio">Web</span>Studio</a
+          >
           <ul class="site-nave list">
             <li class="item">
               <a href="./index.html" class="link current">Студия</a>
@@ -39,7 +40,8 @@
         </nav>
         <ul class="contact-header list">
           <li class="item-contact">
-            <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact"
+              >info@devstudio.com</a>
           </li>
           <li class="item-contact">
             <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
@@ -124,48 +126,219 @@
           <h2 class="section-title our-team">Наша команда</h2>
           <ul class="command-nave list">
             <li class="command-people">
-              <img class="command-image" src="images/img.jpg" alt="photo" width="270" />
+              <img
+                class="command-image"
+                src="images/img.jpg"
+                alt="photo"
+                width="270"/>
               <div class="command">
-              <h3 class="title title-name">Игорь Демьяненко</h3>
-              <p class="position">Product Designer</p>
+                <h3 class="title title-name">Игорь Демьяненко</h3>
+                <p class="position">Product Designer</p>
+                <ul class="command-icoons-list list">
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-people">
-              <img class="command-image" src="images/img(1).jpg" alt="photo1" width="270" />
+              <img
+                class="command-image"
+                src="images/img(1).jpg"
+                alt="photo1"
+                width="270"
+              />
               <div class="command">
-              <h3 class="title title-name">Ольга Репина</h3>
-              <p class="position">Frontend Developer</p>
+                <h3 class="title title-name">Ольга Репина</h3>
+                <p class="position">Frontend Developer</p>
+                <ul class="command-icoons-list list">
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-people">
-              <img class="command-image" src="images/img(2).jpg" alt="photo2" width="270" />
+              <img
+                class="command-image"
+                src="images/img(2).jpg"
+                alt="photo2"
+                width="270"
+              />
               <div class="command">
-              <h3 class="title title-name">Николай Тарасов</h3>
-              <p class="position">Marketing</p>
+                <h3 class="title title-name">Николай Тарасов</h3>
+                <p class="position">Marketing</p>
+                <ul class="command-icoons-list list">
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-people">
-              <img class="command-image" src="images/img(3).jpg" alt="photo3" width="270" />
+              <img
+                class="command-image"
+                src="images/img(3).jpg"
+                alt="photo3"
+                width="270"
+              />
               <div class="command">
-              <h3 class="title title-name">Михаил Ермаков</h3>
-              <p class="position">UI Designer</p>
+                <h3 class="title title-name">Михаил Ермаков</h3>
+                <p class="position">UI Designer</p>
+                <ul class="command-icoons-list list">
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-icoons-item">
+                    <a href="" class="command-icoons-link link">
+                      <svg class="command-icoons-svg">
+                        <use href="./images/icoons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!-- ---------------Наши клиенты-------------------- -->
+      <section class="client">
+        <div class="container">
+          <h2 class="section-title client-title" >Постоянные клиенты</h2>
+            <ul class="client-list list">
+              <li class="client-item">
+                <a href="client-link link">
+                  <svg>
+                    <use href=""></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="client-item">
+                <a href="client-link"></a>
+              </li>
+              <li class="client-item">
+                <a href="client-link"></a>
+              </li>
+              <li class="client-item">
+                <a href="client-link"></a>
+              </li>
+              <li class="client-item">
+                <a href="client-link"></a>
+              </li>
+              <li class="client-item">
+                <a href="client-link"></a>
+              </li>
+            </ul>
+        </div>
+      </section>
     </main>
     <!--Как с нами связаться-->
     <footer class="footer-bgr">
-      <div class="container footer-link">
+        <div class="container footer-link">
         <a href="index.html" class="logo logo-footer">
           <span class="logo-webstudio">Web</span>
-          <span class="logo-webstudiotwo">Studio</span></a>
+          <span class="logo-webstudiotwo">Studio</span></a
+        >
         <address class="location-nave">
           <ul class="contact-footer list">
             <li class="location">
               <a href="https://goo.gl/maps/7xyx75h3Avp7zGrV7" class="nave">
-                г. Киев, пр-т Леси Украинки, 26</a>
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
             <li class="location">
               <a href="mailto:info@example.com" class="contact"
@@ -177,6 +350,39 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="container footer-right">
+        <h3 class="footer-text" >ПРИСОЕДИНЯЙТЕСЬ</h3>
+        <ul class="footer-right-list list">
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
