--- a/index.html
+++ b/index.html
@@ -298,37 +298,63 @@
       <!-- ---------------Наши клиенты-------------------- -->
       <section class="client">
         <div class="container">
-          <h2 class="section-title client-title" >Постоянные клиенты</h2>
+          <h2 class="section-title client-title">Постоянные клиенты</h2>
             <ul class="client-list list">
               <li class="client-item">
-                <a href="client-link link">
-                  <svg>
-                    <use href=""></use>
+                <a href="" class="client-link link">
+                  <svg class="client-icoon" >
+                    <use href="./images/icoons.svg#icon-ya-co"></use>
                   </svg>
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link"></a>
+                <a href="client-link">
+                  <svg class="client-icoon">
+                    <use href="./images/icoons.svg#icon-company-taline-here">
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="client-item">
-                <a href="client-link"></a>
+                <a href="client-link">
+                  <svg class="client-icoon">
+                    <use href="./images/icoons.svg#icon-company">
+                  </use>
+                </svg>
+                </a>
               </li>
               <li class="client-item">
-                <a href="client-link"></a>
+                <a href="client-link">
+                  <svg  class="client-icoon">
+                    <use href="./images/icoons.svg#icon-foster-peters">
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="client-item">
-                <a href="client-link"></a>
+                <a href="client-link">
+                  <svg  class="client-icoon">
+                    <use href="./images/icoons.svg#icon-brand">
+                    </use>
+                  </svg>
+                </a>
               </li>
               <li class="client-item">
-                <a href="client-link"></a>
+                <a href="client-link">
+                  <svg  class="client-icoon">
+                    <use href="./images/icoons.svg#icon-company-tag-line">
+                    </use>
+                  </svg>        
+                </a>
               </li>
             </ul>
         </div>
       </section>
     </main>
     <!--Как с нами связаться-->
-    <footer class="footer-bgr">
-        <div class="container footer-link">
+    <footer class="footer-bgr">  
+      <div class="container footer-container" >
+        <div class="footer-link">
         <a href="index.html" class="logo logo-footer">
           <span class="logo-webstudio">Web</span>
           <span class="logo-webstudiotwo">Studio</span></a
@@ -351,7 +377,7 @@
           </ul>
         </address>
       </div>
-      <div class="container footer-right">
+      <div class="footer-right">
         <h3 class="footer-text" >ПРИСОЕДИНЯЙТЕСЬ</h3>
         <ul class="footer-right-list list">
           <li class="footer-right-item">
@@ -364,26 +390,27 @@
           <li class="footer-right-item">
             <a href="" class="footer-right-link link">
               <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-instagram"></use>
+                <use href="./images/icoons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-right-item">
             <a href="" class="footer-right-link link">
               <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-instagram"></use>
+                <use href="./images/icoons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-right-item">
             <a href="" class="footer-right-link link">
               <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-instagram"></use>
+                <use href="./images/icoons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
