--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
         </nav>
         <ul class="contact-header list">
           <li class="item-contact">
-            <a href="mailto:info@devstudio.com" class="contact"
-              >info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact">
+              <svg class="header-email-svg">
+                <use href="./images/icoons.svg#icon--mail"></use>
+              </svg>info@devstudio.com</a>
           </li>
           <li class="item-contact">
-            <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contact">
+              <svg class="header-contact-svg">
+                <use href="./images/icoons.svg#icon-tel"></use>
+              </svg>  +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -68,6 +73,32 @@
       <!--Плюсы нашей компании-->
       <section class="section">
         <div class="container">
+          <ul class="company-image-list list">
+            <li class="company-image-item">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-antenna">
+                  </use>
+                </svg>
+            </li>
+            <li class="company-image-item">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-diagram">
+                  </use>
+                </svg>
+            </li>
+            <li class="company-image-item">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-clock">
+                  </use>
+                </svg>
+            </li>
+            <li class="company-image-item">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-astronaut">
+                  </use>
+                </svg>
+            </li>
+          </ul>
           <ul class="company list">
             <li class="item-company">
               <h3 class="title">Внимание к деталям</h3>
@@ -308,7 +339,7 @@
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link">
+                <a href="" class="client-link">
                   <svg class="client-icoon">
                     <use href="./images/icoons.svg#icon-company-taline-here">
                     </use>
@@ -316,7 +347,7 @@
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link">
+                <a href="" class="client-link">
                   <svg class="client-icoon">
                     <use href="./images/icoons.svg#icon-company">
                   </use>
@@ -324,7 +355,7 @@
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link">
+                <a href="" class="client-link">
                   <svg  class="client-icoon">
                     <use href="./images/icoons.svg#icon-foster-peters">
                     </use>
@@ -332,7 +363,7 @@
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link">
+                <a href="" class="client-link">
                   <svg  class="client-icoon">
                     <use href="./images/icoons.svg#icon-brand">
                     </use>
@@ -340,7 +371,7 @@
                 </a>
               </li>
               <li class="client-item">
-                <a href="client-link">
+                <a href="" class="client-link">
                   <svg  class="client-icoon">
                     <use href="./images/icoons.svg#icon-company-tag-line">
                     </use>
