--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <ul class="contact-header list">
           <li class="item-contact">
-            <a href="mailto:info@devstudio.com" class="contact">
+            <a href="mailto:info@devstudio.com" class="contact contact-fill">
               <svg class="header-email-svg">
                 <use href="./images/icoons.svg#icon--mail"></use>
               </svg>info@devstudio.com</a>
