--- a/portfolio.html
+++ b/portfolio.html
@@ -21,32 +21,39 @@
   <body>
     <!--Голова сайта-->
     <header class="header">
-        <div class="container navigation-header">
-          <nav class="navigation nav-header">
-            <a href="./index.html" class="logo logo-header">
-              <span class="logo-webstudio">Web</span>Studio</a>
-            <ul class="site-nave list">
-              <li class="item">
-                <a href="./index.html" class="link current">Студия</a>
-              </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link">Портфолио</a>
-              </li>
-              <li class="item">
-                <a href="" class="link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="contact-header list">
-            <li class="item-contact">
-              <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a>
+      <div class="container navigation-header">
+        <nav class="navigation nav-header">
+          <a href="./index.html" class="logo logo-header">
+            <span class="logo-webstudio">Web</span>Studio</a
+          >
+          <ul class="site-nave list">
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
             </li>
-            <li class="item-contact">
-              <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="" class="link">Контакты</a>
             </li>
           </ul>
-        </div>
-      </header>
+        </nav>
+        <ul class="contact-header list">
+          <li class="item-contact">
+            <a href="mailto:info@devstudio.com" class="contact contact-fill">
+              <svg class="header-email-svg">
+                <use href="./images/icoons.svg#icon--mail"></use>
+              </svg>info@devstudio.com</a>
+          </li>
+          <li class="item-contact">
+            <a href="tel:+380961111111" class="contact">
+              <svg class="header-contact-svg">
+                <use href="./images/icoons.svg#icon-tel"></use>
+              </svg>  +38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <!-- Все Портфолио -->
     <main>
       <section>
@@ -154,28 +161,65 @@
     </main>
 
     <!--Как с нами связаться-->
-    <footer class="footer-bgr">
-        <div class="container footer-link">
-          <a href="index.html" class="logo logo-footer">
-            <span class="logo-webstudio">Web</span>
-            <span class="logo-webstudiotwo">Studio</span></a>
-          <address class="location-nave">
-            <ul class="contact-footer list">
-              <li class="location">
-                <a href="https://goo.gl/maps/7xyx75h3Avp7zGrV7" class="nave">
-                  г. Киев, пр-т Леси Украинки, 26</a>
-              </li>
-              <li class="location">
-                <a href="mailto:info@example.com" class="contact"
-                  >info@example.com</a
-                >
-              </li>
-              <li class="location">
-                <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
-      </footer>
+    <footer class="footer-bgr">  
+      <div class="container footer-container" >
+        <div class="footer-link">
+        <a href="index.html" class="logo logo-footer">
+          <span class="logo-webstudio">Web</span>
+          <span class="logo-webstudiotwo">Studio</span></a
+        >
+        <address class="location-nave">
+          <ul class="contact-footer list">
+            <li class="location">
+              <a href="https://goo.gl/maps/7xyx75h3Avp7zGrV7" class="nave">
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="location">
+              <a href="mailto:info@example.com" class="contact"
+                >info@example.com</a
+              >
+            </li>
+            <li class="location">
+              <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="footer-right">
+        <h3 class="footer-text" >ПРИСОЕДИНЯЙТЕСЬ</h3>
+        <ul class="footer-right-list list">
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-item">
+            <a href="" class="footer-right-link link">
+              <svg class="footer-right-icoons" >
+                <use href="./images/icoons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </footer>
     </body>
   </html>
