--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
             </div>
             </li>
             <li class="box-job">
-              <img
+              <img class="command-image"
                 src="images/poster-new-orlean-vs-golden-star.jpg"
                 alt="poster-new-orlean-vs-golden-star"
                 width="370"/>
@@ -98,28 +98,30 @@
               </div>
             </li>
             <li class="box-job">
-              <img src="images/seafood.jpg" alt="seafood" width="370" />
+              <img class="command-image"
+               src="images/seafood.jpg" alt="seafood" width="370" />
               <div class="our-work">
               <h2 class="jobs-name">Ресторан Seafood</h2>
               <p class="job">Приложение</p>
               </div>
             </li>
             <li class="box-job">
-              <img src="images/prime.jpg" alt="prime" width="370" />
+              <img class="command-image" 
+              src="images/prime.jpg" alt="prime" width="370" />
               <div class="our-work">
               <h2 class="jobs-name">Проект Prime</h2>
               <p class="job">Маркетинг</p>
               </div>
             </li>
             <li class="box-job">
-              <img src="images/boxes.jpg" alt="boxes" width="370" />
+              <img class="command-image" src="images/boxes.jpg" alt="boxes" width="370" />
               <div class="our-work">
               <h2 class="jobs-name">Проект Boxes</h2>
               <p class="job">Приложение</p>
               </div>
             </li>
             <li class="box-job">
-              <img
+              <img class="command-image"
                 src="images/inspiration-has-no-borders.jpg"
                 alt="inspiration-has-no-borders"
                 width="370"/>
@@ -129,7 +131,7 @@
               </div> 
             </li>
             <li class="box-job">
-              <img
+              <img class="command-image"
                 src="images/limited-edition.jpg"
                 alt="limited-edition"
                 width="370"/>
@@ -139,14 +141,15 @@
               </div>
             </li>
             <li class="box-job">
-              <img src="images/lab.jpg" alt="lab" width="370" />
+              <img class="command-image"
+               src="images/lab.jpg" alt="lab" width="370" />
               <div class="our-work">
               <h2 class="jobs-name">Проект LAB</h2>
               <p class="job">Маркетинг</p>
               </div>
             </li>
             <li class="box-job">
-              <img
+              <img class="command-image"
                 src="images/growing-business.jpg"
                 alt="growing-business"
                 width="370"/>
