--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <ul class="contact-header list">
           <li class="item-contact">
-            <a href="mailto:info@devstudio.com" class="contact contact-fill">
+            <a href="mailto:info@devstudio.com" class="contact">
               <svg class="header-email-svg">
                 <use href="./images/icoons.svg#icon--mail"></use>
               </svg>info@devstudio.com</a>
@@ -73,34 +73,14 @@
       <!--Плюсы нашей компании-->
       <section class="section">
         <div class="container">
-          <ul class="company-image-list list">
-            <li class="company-image-item">
+          <ul class="company list">
+            <li class="item-company">
+              <div class="company-image">
                 <svg class="company-image-svg">
                   <use href="./images/icoons.svg#icon-antenna">
                   </use>
-                </svg>
-            </li>
-            <li class="company-image-item">
-                <svg class="company-image-svg">
-                  <use href="./images/icoons.svg#icon-diagram">
-                  </use>
-                </svg>
-            </li>
-            <li class="company-image-item">
-                <svg class="company-image-svg">
-                  <use href="./images/icoons.svg#icon-clock">
-                  </use>
-                </svg>
-            </li>
-            <li class="company-image-item">
-                <svg class="company-image-svg">
-                  <use href="./images/icoons.svg#icon-astronaut">
-                  </use>
-                </svg>
-            </li>
-          </ul>
-          <ul class="company list">
-            <li class="item-company">
+                </svg> 
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -108,6 +88,12 @@
               </p>
             </li>
             <li class="item-company">
+              <div class="company-image">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-diagram">
+                  </use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -115,6 +101,12 @@
               </p>
             </li>
             <li class="item-company">
+              <div class="company-image">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-clock">
+                  </use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -122,6 +114,12 @@
               </p>
             </li>
             <li class="item-company">
+              <div class="company-image">
+                <svg class="company-image-svg">
+                  <use href="./images/icoons.svg#icon-astronaut">
+                  </use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
