--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
           >
           <ul class="site-nave list">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="link current">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="item">
               <a href="" class="link">Контакты</a>
@@ -40,7 +40,7 @@
         </nav>
         <ul class="contact-header list">
           <li class="item-contact">
-            <a href="mailto:info@devstudio.com" class="contact contact-fill">
+            <a href="mailto:info@devstudio.com" class="contact">
               <svg class="header-email-svg">
                 <use href="./images/icoons.svg#icon--mail"></use>
               </svg>info@devstudio.com</a>
