--- a/index.html
+++ b/index.html
@@ -441,5 +441,12 @@
       </div>
     </div>
     </footer>
+    <div class="backdrop">
+      <div class="backdrop-modalka">
+        <button type="button" class="backdrop-button">
+          
+        </button>
+      </div>
+    </div>
   </body>
 </html>
