--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,17 @@
           <li class="item-contact">
             <a href="mailto:info@devstudio.com" class="contact">
               <svg class="header-email-svg">
-                <use href="./images/icoons.svg#icon--mail"></use>
-              </svg>info@devstudio.com</a>
+                <use href="./images/icoons.svg#icon--mail"></use></svg>
+                info@devstudio.com
+            </a>
           </li>
           <li class="item-contact">
             <a href="tel:+380961111111" class="contact">
               <svg class="header-contact-svg">
                 <use href="./images/icoons.svg#icon-tel"></use>
-              </svg>  +38 096 111 11 11</a>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -81,81 +84,174 @@
         <div class="container">
           <ul class="nav-jobs list">
             <li class="box-job">
-              <img class="command-image" src="images/texnokryak.jpg" alt="texnokryak" width="370" />
-            <div class="our-work">
-              <h2 class="jobs-name">Технокряк</h2>
-              <p class="job">Веб-сайт</p>
-            </div>
-            </li>
-            <li class="box-job">
-              <img class="command-image"
-                src="images/poster-new-orlean-vs-golden-star.jpg"
-                alt="poster-new-orlean-vs-golden-star"
-                width="370"/>
+              <div class="command-block-job">
+                <img
+                  class="command-image"
+                  src="images/texnokryak.jpg"
+                  alt="texnokryak"
+                  width="370"
+                />
+                <p class="command-text-animation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Постер New Orlean vs Golden Star</h2>
-              <p class="job">Дизайн</p>
+                <h2 class="jobs-name">Технокряк</h2>
+                <p class="job">Веб-сайт</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image"
-               src="images/seafood.jpg" alt="seafood" width="370" />
+              <div class="command-block-job">
+                <img
+                  class="command-image"
+                  src="images/poster-new-orlean-vs-golden-star.jpg"
+                  alt="poster-new-orlean-vs-golden-star"
+                  width="370"
+                />
+                <p class="command-text-animation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Ресторан Seafood</h2>
-              <p class="job">Приложение</p>
+                <h2 class="jobs-name">Постер New Orlean vs Golden Star</h2>
+                <p class="job">Дизайн</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image" 
-              src="images/prime.jpg" alt="prime" width="370" />
+              <div class="command-block-job">
+                <img
+                  class="command-image"
+                  src="images/seafood.jpg"
+                  alt="seafood"
+                  width="370"
+                />
+                <p class="command-text-animation">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Проект Prime</h2>
-              <p class="job">Маркетинг</p>
+                <h2 class="jobs-name">Ресторан Seafood</h2>
+                <p class="job">Приложение</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image" src="images/boxes.jpg" alt="boxes" width="370" />
+              <div class="command-block-job">
+              <img
+                class="command-image"
+                src="images/prime.jpg"
+                alt="prime"
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Проект Boxes</h2>
-              <p class="job">Приложение</p>
+                <h2 class="jobs-name">Проект Prime</h2>
+                <p class="job">Маркетинг</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image"
+              <div class="command-block-job">
+              <img
+                class="command-image"
+                src="images/boxes.jpg"
+                alt="boxes"
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
+              <div class="our-work">
+                <h2 class="jobs-name">Проект Boxes</h2>
+                <p class="job">Приложение</p>
+              </div>
+            </li>
+            <li class="box-job">
+              <div class="command-block-job">
+                <img
+                class="command-image"
                 src="images/inspiration-has-no-borders.jpg"
                 alt="inspiration-has-no-borders"
-                width="370"/>
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Inspiration has no Borders</h2>
-              <p class="job">Веб-сайт</p>
-              </div> 
+                <h2 class="jobs-name">Inspiration has no Borders</h2>
+                <p class="job">Веб-сайт</p>
+              </div>
             </li>
             <li class="box-job">
-              <img class="command-image"
+              <div class="command-block-job">
+                <img
+                class="command-image"
                 src="images/limited-edition.jpg"
                 alt="limited-edition"
-                width="370"/>
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Издание Limited Edition</h2>
-              <p class="job">Дизайн</p>
+                <h2 class="jobs-name">Издание Limited Edition</h2>
+                <p class="job">Дизайн</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image"
-               src="images/lab.jpg" alt="lab" width="370" />
+              <div class="command-block-job">
+              <img
+                class="command-image"
+                src="images/lab.jpg"
+                alt="lab"
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Проект LAB</h2>
-              <p class="job">Маркетинг</p>
+                <h2 class="jobs-name">Проект LAB</h2>
+                <p class="job">Маркетинг</p>
               </div>
             </li>
             <li class="box-job">
-              <img class="command-image"
+              <div class="command-block-job">
+              <img
+                class="command-image"
                 src="images/growing-business.jpg"
                 alt="growing-business"
-                width="370"/>
+                width="370"
+              />
+              <p class="command-text-animation">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
               <div class="our-work">
-              <h2 class="jobs-name">Growing Business</h2>
-              <p class="job">Приложение</p>
+                <h2 class="jobs-name">Growing Business</h2>
+                <p class="job">Приложение</p>
               </div>
             </li>
           </ul>
@@ -164,65 +260,67 @@
     </main>
 
     <!--Как с нами связаться-->
-    <footer class="footer-bgr">  
-      <div class="container footer-container" >
+    <footer class="footer-bgr">
+      <div class="container footer-container">
         <div class="footer-link">
-        <a href="index.html" class="logo logo-footer">
-          <span class="logo-webstudio">Web</span>
-          <span class="logo-webstudiotwo">Studio</span></a
-        >
-        <address class="location-nave">
-          <ul class="contact-footer list">
-            <li class="location">
-              <a href="https://goo.gl/maps/7xyx75h3Avp7zGrV7" class="nave">
-                г. Киев, пр-т Леси Украинки, 26</a
-              >
+          <a href="index.html" class="logo logo-footer">
+            <span class="logo-webstudio">Web</span>
+            <span class="logo-webstudiotwo">Studio</span></a
+          >
+          <address class="location-nave">
+            <ul class="contact-footer list">
+              <li class="location">
+                <a href="https://goo.gl/maps/7xyx75h3Avp7zGrV7" class="nave">
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="location">
+                <a href="mailto:info@example.com" class="contact"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="location">
+                <a href="tel:+380991111111" class="contact"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-right">
+          <h3 class="footer-text">ПРИСОЕДИНЯЙТЕСЬ</h3>
+          <ul class="footer-right-list list">
+            <li class="footer-right-item">
+              <a href="" class="footer-right-link link">
+                <svg class="footer-right-icoons">
+                  <use href="./images/icoons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="location">
-              <a href="mailto:info@example.com" class="contact"
-                >info@example.com</a
-              >
+            <li class="footer-right-item">
+              <a href="" class="footer-right-link link">
+                <svg class="footer-right-icoons">
+                  <use href="./images/icoons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="location">
-              <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
+            <li class="footer-right-item">
+              <a href="" class="footer-right-link link">
+                <svg class="footer-right-icoons">
+                  <use href="./images/icoons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-right-item">
+              <a href="" class="footer-right-link link">
+                <svg class="footer-right-icoons">
+                  <use href="./images/icoons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
-      <div class="footer-right">
-        <h3 class="footer-text" >ПРИСОЕДИНЯЙТЕСЬ</h3>
-        <ul class="footer-right-list list">
-          <li class="footer-right-item">
-            <a href="" class="footer-right-link link">
-              <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-right-item">
-            <a href="" class="footer-right-link link">
-              <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-right-item">
-            <a href="" class="footer-right-link link">
-              <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-right-item">
-            <a href="" class="footer-right-link link">
-              <svg class="footer-right-icoons" >
-                <use href="./images/icoons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
     </footer>
-    </body>
-  </html>
+  </body>
+</html>
